// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: issue state /github close issue 1`] = `
Array [
  "channel#1#C2147483705:issue#undefined",
  "pending-command#13345224609.738474920.8088930838d88f008e0",
]
`;

exports[`Integration: issue state /github close issue 2`] = `
Array [
  Array [
    "channel#1#C2147483705:issue#undefined",
    Object {
      "channel": "C2147483705",
      "ts": undefined,
    },
  ],
  Array [
    "pending-command#13345224609.738474920.8088930838d88f008e0",
    Object {
      "channel_id": "C2147483705",
      "channel_name": "test",
      "command": "/github",
      "enterprise_id": "E0001",
      "enterprise_name": "Globular%20Construct%20Inc",
      "response_url": "https://hooks.slack.com/commands/1234/5678",
      "team_domain": "example",
      "team_id": "T0001",
      "text": "close https://github.com/owner/repo/issues/123",
      "token": "secret",
      "trigger_id": "13345224609.738474920.8088930838d88f008e0",
      "user_id": "U2147483697",
      "user_name": "Steve",
    },
  ],
]
`;

exports[`Integration: issue state /github reopen issue 1`] = `
Array [
  "channel#1#C2147483705:issue#undefined",
  "pending-command#13345224609.738474920.8088930838d88f008e0",
]
`;

exports[`Integration: issue state /github reopen issue 2`] = `
Array [
  Array [
    "channel#1#C2147483705:issue#undefined",
    Object {
      "channel": "C2147483705",
      "ts": undefined,
    },
  ],
  Array [
    "pending-command#13345224609.738474920.8088930838d88f008e0",
    Object {
      "channel_id": "C2147483705",
      "channel_name": "test",
      "command": "/github",
      "enterprise_id": "E0001",
      "enterprise_name": "Globular%20Construct%20Inc",
      "response_url": "https://hooks.slack.com/commands/1234/5678",
      "team_domain": "example",
      "team_id": "T0001",
      "text": "reopen https://github.com/owner/repo/issues/123",
      "token": "secret",
      "trigger_id": "13345224609.738474920.8088930838d88f008e0",
      "user_id": "U2147483697",
      "user_name": "Steve",
    },
  ],
]
`;

exports[`Integration: issue state missing permissions 1`] = `
Array [
  "pending-command#13345224609.738474920.8088930838d88f008e0",
]
`;

exports[`Integration: issue state missing permissions 2`] = `
Array [
  Array [
    "pending-command#13345224609.738474920.8088930838d88f008e0",
    Object {
      "channel_id": "C2147483705",
      "channel_name": "test",
      "command": "/github",
      "enterprise_id": "E0001",
      "enterprise_name": "Globular%20Construct%20Inc",
      "response_url": "https://hooks.slack.com/commands/1234/5678",
      "team_domain": "example",
      "team_id": "T0001",
      "text": "close https://github.com/owner/repo/issues/123",
      "token": "secret",
      "trigger_id": "13345224609.738474920.8088930838d88f008e0",
      "user_id": "U2147483697",
      "user_name": "Steve",
    },
  ],
]
`;
